Remove download logic